force-app/main/default/objects/ServiceAppointment/fields/Account_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Shipping_Address__c</fullName>
    <formula>Account__r.ShippingStreet + &apos;, &apos; 
+ Account__r.ShippingCity + &apos;, &apos; 
+ Account__r.ShippingState + &apos;, &apos; 
+ Account__r.ShippingPostalCode + &apos;, &apos; 
+ Account__r.ShippingCountry</formula>
    <label>Account Shipping Address</label>
    <type>Text</type>
</CustomField>