force-app/main/default/objects/ServiceAppointment/fields/Allow_Scheduled_Time_Override__c.field-meta.xml
<CustomField>
    <fullName>Allow_Scheduled_Time_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Scheduled Time Override</label>
    <type>Checkbox</type>
</CustomField>