force-app/main/default/objects/ServiceAppointment/fields/Alternate_Contact__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures the alternative contact for the service appointment.</description>
    <inlineHelpText>Indicates the alternative contact for the service appointment.</inlineHelpText>
    <label>Alternate Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Alternate contact must belong to account listed on SA!</errorMessage>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>