force-app/main/default/objects/ServiceAppointment/fields/Alternate_Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Contact_Mobile__c</fullName>
    <formula>IF(ISBLANK(Alternate_Contact__r.Full_Mobile__c ),
&apos;&apos;,
Alternate_Contact__r.Full_Mobile__c
)</formula>
    <label>Alternate Contact Mobile</label>
    <type>Text</type>
</CustomField>