force-app/main/default/objects/ServiceAppointment/fields/Alternate_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Contact_Name__c</fullName>
    <formula>Alternate_Contact__r.FullName__c</formula>
    <label>Alternate Contact Name</label>
    <type>Text</type>
</CustomField>