force-app/main/default/objects/ServiceAppointment/fields/Alternate_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Contact_Phone__c</fullName>
    <description>Captures the alternative contact&apos;s full telephone number.</description>
    <formula>IF(
ISBLANK(Alternate_Contact__r.Full_Telephone__c),
&apos;&apos;,
Alternate_Contact__r.Full_Telephone__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the alternative contact&apos;s full telephone number.</inlineHelpText>
    <label>Alternate Contact Phone</label>
    <type>Text</type>
</CustomField>