force-app/main/default/objects/ServiceAppointment/fields/Annual_Safety_Inspection_Eval_Details__c.field-meta.xml
<CustomField>
    <fullName>Annual_Safety_Inspection_Eval_Details__c</fullName>
    <description>Captures whether the annual safety inspection has been completed on the equipment beng used for evaluation.</description>
    <inlineHelpText>Indicates whether the annual safety inspection has been completed on the equipment beng used for evaluation.</inlineHelpText>
    <label>Annual Safety Inspection Eval Details</label>
    <type>TextArea</type>
</CustomField>