force-app/main/default/objects/ServiceAppointment/fields/Assigned_Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Service Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>