force-app/main/default/objects/ServiceAppointment/fields/Attendance_Investigation__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Investigation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If no one is checked into the course, administrator is notified to investigate</description>
    <label>Attendance Investigation</label>
    <type>Checkbox</type>
</CustomField>