force-app/main/default/objects/ServiceAppointment/fields/BigMarker_Webinar_Id__c.field-meta.xml
<CustomField>
    <fullName>BigMarker_Webinar_Id__c</fullName>
    <label>BigMarker Webinar Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>