force-app/main/default/objects/ServiceAppointment/fields/BigMarker_Webinar_Link__c.field-meta.xml
<CustomField>
    <fullName>BigMarker_Webinar_Link__c</fullName>
    <label>BigMarker Webinar Link</label>
    <type>Url</type>
</CustomField>