force-app/main/default/objects/ServiceAppointment/fields/Business_Days_to_Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>Business_Days_to_Scheduled_Start__c</fullName>
    <formula>(5 * FLOOR( ( DATEVALUE( SchedStartTime ) - DATE( 1900, 1, 8) ) / 7 ) 
    + MIN( 5, MOD( DATEVALUE( SchedStartTime ) - DATE( 1900, 1, 8), 7 )  ) 
) - 
(5 * FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) 
      + MIN( 5, MOD( TODAY() - DATE( 1900, 1, 8), 7 ) ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Days to Scheduled Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>