force-app/main/default/objects/ServiceAppointment/fields/Can_Reschedule__c.field-meta.xml
<CustomField>
    <fullName>Can_Reschedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Reschedule</label>
    <type>Checkbox</type>
</CustomField>