force-app/main/default/objects/ServiceAppointment/fields/Capture_Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>Capture_Scheduled_Start__c</fullName>
    <label>Capture Scheduled Start</label>
    <type>DateTime</type>
</CustomField>