force-app/main/default/objects/ServiceAppointment/fields/Card_Cert_Product_Title__c.field-meta.xml
<CustomField>
    <fullName>Card_Cert_Product_Title__c</fullName>
    <description>Captures the Product title to use on the cert/card. Modifiable. Pulled from the Product - External Product Name</description>
    <inlineHelpText>Indicates the Product title to use on the cert/card. Modifiable. Pulled from the Product - External Product Name</inlineHelpText>
    <label>Card/Cert Product Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>