force-app/main/default/objects/ServiceAppointment/fields/Certificate_Template__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Template__c</fullName>
    <description>Captures the template to use. Pulled from Product.</description>
    <formula>TEXT(Product__r.Certificate_Template__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the template to use. Pulled from Product.</inlineHelpText>
    <label>Certificate Template</label>
    <type>Text</type>
</CustomField>