force-app/main/default/objects/ServiceAppointment/fields/Checked_In_Seats__c.field-meta.xml
<CustomField>
    <fullName>Checked_In_Seats__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Represents how many attendees are checked in</description>
    <inlineHelpText>Representation of how many attendees have been checked in successfully</inlineHelpText>
    <label>Checked In Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>