force-app/main/default/objects/ServiceAppointment/fields/ClassParent__c.field-meta.xml
<CustomField>
    <fullName>ClassParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClassParent</label>
    <referenceTo>Classes__c</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>