force-app/main/default/objects/ServiceAppointment/fields/Client_Changed_Evaluation_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Changed_Evaluation_Type__c</fullName>
    <description>Captures if the client changes the type of evaluation they need to be conducted on a scheduled evaluation Service Appointment.</description>
    <inlineHelpText>Indicates if the client changes the type of evaluation they need to be conducted on a scheduled evaluation Service Appointment.</inlineHelpText>
    <label>Client Changed Evaluation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>