force-app/main/default/objects/ServiceAppointment/fields/Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Confirmed__c</fullName>
    <description>Captures whether the Service Appointment has been confirmed or not, specifically for non-classroom courses. Defaults to &quot;No&quot; until the Order is booked.</description>
    <inlineHelpText>Indicates whether the Service Appointment has been confirmed or not, specifically for non-classroom courses. Defaults to &quot;No&quot; until the Order is booked.</inlineHelpText>
    <label>Confirmed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>