force-app/main/default/objects/ServiceAppointment/fields/Confirmed_Seats__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Seats__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the number Attendees on the Service Appointment where Confirmed = Yes.</description>
    <inlineHelpText>Indicates the Attendees on the Service Appointment where Confirmed = Yes.</inlineHelpText>
    <label>Confirmed Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>