force-app/main/default/objects/ServiceAppointment/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <description>Captures the specific contractor used on a Service Appointment when Service Appointment is assigned to the &quot;OSG Contractors&quot; Service Resource.</description>
    <inlineHelpText>Indicates the specific contractor used when Service Appointment is assigned to the &quot;OSG Contractors&quot; Service Resource.</inlineHelpText>
    <label>Contractor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Battlefield</fullName>
            </value>
            <value>
                <fullName>Connor Cassidy</fullName>
            </value>
            <value>
                <fullName>Dale Barton</fullName>
            </value>
            <value>
                <fullName>David Jung</fullName>
            </value>
            <value>
                <fullName>David Larochelle</fullName>
            </value>
            <value>
                <fullName>Elizabeth Rooney</fullName>
            </value>
            <value>
                <fullName>Future Contractor 2</fullName>
            </value>
            <value>
                <fullName>Future Contractor 3</fullName>
            </value>
            <value>
                <fullName>Future Contractor 4</fullName>
            </value>
            <value>
                <fullName>Future Contractor 5</fullName>
            </value>
            <value>
                <fullName>Herbert Williams</fullName>
            </value>
            <value>
                <fullName>IHEAS Inc.</fullName>
            </value>
            <value>
                <fullName>Jennifer Beeler</fullName>
            </value>
            <value>
                <fullName>Karen Pinnock</fullName>
            </value>
            <value>
                <fullName>London Fire Equipment</fullName>
            </value>
            <value>
                <fullName>Marlena Cole</fullName>
            </value>
            <value>
                <fullName>MidSouthwest Training</fullName>
            </value>
            <value>
                <fullName>Mike Hannah</fullName>
            </value>
            <value>
                <fullName>Ontario Truck Driving</fullName>
            </value>
            <value>
                <fullName>Options Inc 1</fullName>
            </value>
            <value>
                <fullName>Options Inc 2</fullName>
            </value>
            <value>
                <fullName>OSG</fullName>
            </value>
            <value>
                <fullName>Promar Petroleum</fullName>
            </value>
            <value>
                <fullName>Randall Chamberlain</fullName>
            </value>
            <value>
                <fullName>Ron Hussain</fullName>
            </value>
            <value>
                <fullName>Safety Training Ottawa</fullName>
            </value>
            <value>
                <fullName>Samara Vasciana</fullName>
            </value>
            <value>
                <fullName>Shanroy Shirley</fullName>
            </value>
            <value>
                <fullName>Silecio</fullName>
            </value>
            <value>
                <fullName>Steven Lacasse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>