force-app/main/default/objects/ServiceAppointment/fields/Course_Agenda__c.field-meta.xml
<CustomField>
    <fullName>Course_Agenda__c</fullName>
    <description>Captures the course agenda in the rich text field to allow for formatting and images.</description>
    <inlineHelpText>Indicates the course agenda in the rich text field to allow for formatting and images.</inlineHelpText>
    <label>Course Agenda</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>