force-app/main/default/objects/ServiceAppointment/fields/Course_Hard_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Course_Hard_Capacity__c</fullName>
    <description>Determines if the course has a hard capacity or not (Ministry)</description>
    <formula>IF(
OR(
 ISPICKVAL(Product__r.Course_Product_Line__c, &apos;JHSCI&apos;),
 ISPICKVAL(Product__r.Course_Product_Line__c, &apos;JHSCII&apos;),
 ISPICKVAL(Product__r.Course_Product_Line__c, &apos;JHSCR&apos;)
),
25,
IF(
OR(
 ISPICKVAL(Product__r.Course_Product_Line__c, &apos;WAHC&apos;),
 ISPICKVAL(Product__r.Course_Product_Line__c, &apos;WAHCR&apos;),
 ISPICKVAL(Product__r.Course_Product_Line__c, &apos;WAHCTTT&apos;)
),
12,
0
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Hard Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>