force-app/main/default/objects/ServiceAppointment/fields/Course_Material__c.field-meta.xml
<CustomField>
    <fullName>Course_Material__c</fullName>
    <description>Captures the materials that come with this course. Pulled from the Product when connected.</description>
    <inlineHelpText>Indicates the materials that come with this course. Pulled from the Product when connected.</inlineHelpText>
    <label>Course Material</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>