force-app/main/default/objects/ServiceAppointment/fields/Course_Maximum_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Course_Maximum_Capacity__c</fullName>
    <description>Captures the Product&apos;s Maximum Capacity (Maximum Attendees) for the training. Populated based on Product lookup indicated.</description>
    <inlineHelpText>Indicates the Product&apos;s Maximum Capacity (Maximum Attendees) for the training. Populated based on Product lookup indicated.</inlineHelpText>
    <label>DELETE_Course Maximum Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>