force-app/main/default/objects/ServiceAppointment/fields/Course_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Course_Product_Line__c</fullName>
    <description>Captures the product line for the course. Pulled from Product.</description>
    <inlineHelpText>Indicates the courses product line. Pulled from Product.</inlineHelpText>
    <label>Course Product Line</label>
    <length>20</length>
    <type>Text</type>
</CustomField>