force-app/main/default/objects/ServiceAppointment/fields/Course_Summary__c.field-meta.xml
<CustomField>
    <fullName>Course_Summary__c</fullName>
    <description>Captures the high-level product summary. Pulled from Product.</description>
    <inlineHelpText>Indicates the high-level product summary. Pulled from Product.</inlineHelpText>
    <label>Course Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>