force-app/main/default/objects/ServiceAppointment/fields/Current_Quoted_Seats__c.field-meta.xml
<CustomField>
    <fullName>Current_Quoted_Seats__c</fullName>
    <description>Captures the number Attendees on the Service Appointment where Confirmed = Yes plus the sum Quantity of all Classroom Quoted Seats.</description>
    <inlineHelpText>Indicates the number Attendees on the Service Appointment where Confirmed = Yes plus the sum Quantity of all Classroom Quoted Seats.</inlineHelpText>
    <label>Current Quoted Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>