force-app/main/default/objects/ServiceAppointment/fields/Days_Till_Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>Days_Till_Scheduled_Start__c</fullName>
    <description>Calculate the number of days between TODAY() and Scheduled Start</description>
    <formula>DATEVALUE( SchedStartTime ) - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculate the number of days between TODAY() and Scheduled Start</inlineHelpText>
    <label>Days Till Scheduled Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>