force-app/main/default/objects/ServiceAppointment/fields/Distance_Learning__c.field-meta.xml
<CustomField>
    <fullName>Distance_Learning__c</fullName>
    <formula>Product__r.Distance_Learning__c</formula>
    <label>Distance Learning</label>
    <type>Checkbox</type>
</CustomField>