force-app/main/default/objects/ServiceAppointment/fields/Electronic_Devices_Allowed_on_Premises__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Devices_Allowed_on_Premises__c</fullName>
    <description>Captures if the trainer is allowed to bring electronic devices are allowed at the clients training address(es). Pulled from Account.</description>
    <formula>TEXT( Account__r.Electronic_Devices_Allowed_on_Premises__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the trainer is allowed to bring electronic devices are allowed at the clients training address(es). Pulled from Account.</inlineHelpText>
    <label>Electronic Devices Allowed on Premises?</label>
    <type>Text</type>
</CustomField>