force-app/main/default/objects/ServiceAppointment/fields/Facility_Cost__c.field-meta.xml
<CustomField>
    <fullName>Facility_Cost__c</fullName>
    <description>Captures the cost of the facility. Pulled from Training Address Location record.</description>
    <formula>Training_Address1__r.Room_Rental_Pricing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Captures the cost of the facility. Pulled from Training Address Location record.</inlineHelpText>
    <label>Facility Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>