force-app/main/default/objects/ServiceAppointment/fields/Feedback_Count__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Count__c</fullName>
    <label>Feedback Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>