force-app/main/default/objects/ServiceAppointment/fields/Feedback_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Instructor__c</fullName>
    <label>Feedback Instructor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>