force-app/main/default/objects/ServiceAppointment/fields/Feedback_Location__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Location__c</fullName>
    <label>Feedback Location</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>