force-app/main/default/objects/ServiceAppointment/fields/Feedback_Overall__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Overall__c</fullName>
    <label>Feedback Overall</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>