force-app/main/default/objects/ServiceAppointment/fields/Final_Reminder_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Final_Reminder_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Reminder Email Sent</label>
    <type>Checkbox</type>
</CustomField>