force-app/main/default/objects/ServiceAppointment/fields/Full_AttendeeId__c.field-meta.xml
<CustomField>
    <fullName>Full_AttendeeId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Full_AttendeeId</label>
    <type>Text</type>
</CustomField>