force-app/main/default/objects/ServiceAppointment/fields/Has_SkillsPass_Key__c.field-meta.xml
<CustomField>
    <fullName>Has_SkillsPass_Key__c</fullName>
    <formula>NOT(ISBLANK(Product__r.SkillsPass_Key__c))</formula>
    <label>Has SkillsPass Key</label>
    <type>Checkbox</type>
</CustomField>