force-app/main/default/objects/ServiceAppointment/fields/Ignore_Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Scheduled_Start__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Scheduled Start</label>
    <type>Checkbox</type>
</CustomField>