force-app/main/default/objects/ServiceAppointment/fields/IH3POS__c.field-meta.xml
<CustomField>
    <fullName>IH3POS__c</fullName>
    <description>Captures the manner in which the course is being delivered for a Service Appointment (Course).</description>
    <inlineHelpText>Indicates the manner in which the course is being delivered for this Service Appointment (Course).</inlineHelpText>
    <label>IH3POS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Site</fullName>
            </value>
            <value>
                <fullName>In-House</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>