force-app/main/default/objects/ServiceAppointment/fields/Learning_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Learning_Objectives__c</fullName>
    <description>Captures the learning objectives of the course. Pulled from Product.</description>
    <inlineHelpText>Indicates the learning objectives of the course. Pulled from Product.</inlineHelpText>
    <label>Learning Objectives</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>