force-app/main/default/objects/ServiceAppointment/fields/Legislative_Reference__c.field-meta.xml
<CustomField>
    <fullName>Legislative_Reference__c</fullName>
    <description>Captures the legislative reference information. Pulled from the Product.</description>
    <inlineHelpText>Indicates the legislative reference information for the product. Pulled from Product.</inlineHelpText>
    <label>Legislative Reference</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>