force-app/main/default/objects/ServiceAppointment/fields/Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Code__c</fullName>
    <description>Captures the location code used for internal identification.</description>
    <formula>Training_Address1__r.Location_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the location code used for internal identification.</inlineHelpText>
    <label>Location Code</label>
    <type>Text</type>
</CustomField>