force-app/main/default/objects/ServiceAppointment/fields/Location_Max_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Location_Max_Capacity__c</fullName>
    <formula>Training_Address1__r.Classroom_Size__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Maximum Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>