force-app/main/default/objects/ServiceAppointment/fields/Location_Maximum_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Location_Maximum_Capacity__c</fullName>
    <label>DELETE_Location Maximum Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>