force-app/main/default/objects/ServiceAppointment/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <description>Set to the Location Name of the Location Address</description>
    <formula>Training_Address1__r.Location_Address__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Name</label>
    <type>Text</type>
</CustomField>