force-app/main/default/objects/ServiceAppointment/fields/Location_Notes__c.field-meta.xml
<CustomField>
    <fullName>Location_Notes__c</fullName>
    <inlineHelpText>Should contain details about entry location and if its required to check in with anyone at the location prior to training</inlineHelpText>
    <label>Location Notes</label>
    <type>TextArea</type>
</CustomField>