force-app/main/default/objects/ServiceAppointment/fields/Material_Location__c.field-meta.xml
<CustomField>
    <fullName>Material_Location__c</fullName>
    <description>Captures the location the materials need to be available at.</description>
    <inlineHelpText>Indicates the location the materials need to be available at.</inlineHelpText>
    <label>Material Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LON</fullName>
            </value>
            <value>
                <fullName>CMB</fullName>
            </value>
            <value>
                <fullName>MIS</fullName>
            </value>
            <value>
                <fullName>COU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>