force-app/main/default/objects/ServiceAppointment/fields/Material_Notes__c.field-meta.xml
<CustomField>
    <fullName>Material_Notes__c</fullName>
    <description>Captures notes provided by Sales for Training Operations.</description>
    <inlineHelpText>Notes related to the material for this Service Appointment. To be used by Sales for Training Operations to review.</inlineHelpText>
    <label>Material Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>