force-app/main/default/objects/ServiceAppointment/fields/Material_Quantity_Packed__c.field-meta.xml
<CustomField>
    <fullName>Material_Quantity_Packed__c</fullName>
    <description>Captures the number of materials packed for the course.</description>
    <inlineHelpText>Indicates the number of materials packed for the course.</inlineHelpText>
    <label>Material Quantity Packed</label>
    <type>TextArea</type>
</CustomField>