force-app/main/default/objects/ServiceAppointment/fields/Max_Capacity_Override__c.field-meta.xml
<CustomField>
    <fullName>Max_Capacity_Override__c</fullName>
    <label>Max Capacity Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>