force-app/main/default/objects/ServiceAppointment/fields/My_Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>My_Service_Appointment__c</fullName>
    <description>captures that the Assigned resource of Service Appointment is same as current system user</description>
    <formula>IF($User.Id =  Assigned_Service_Resource__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Service Appointment</label>
    <type>Checkbox</type>
</CustomField>