force-app/main/default/objects/ServiceAppointment/fields/Not_Locked__c.field-meta.xml
<CustomField>
    <fullName>Not_Locked__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Set to true unless Scheduled Start is NOW + 3 days or if Product Family = &quot;Consulting Services&quot;. via time-based WFR to Used with Optimization criteria.</description>
    <inlineHelpText>Set to true unless Scheduled Start is NOW + 3 days or if Product Family = &quot;Consulting Services&quot;. via time-based WFR to Used with Optimization criteria.</inlineHelpText>
    <label>Not Locked</label>
    <type>Checkbox</type>
</CustomField>