force-app/main/default/objects/ServiceAppointment/fields/Number_of_Attendees_Evaluated__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attendees_Evaluated__c</fullName>
    <description>Captures the number of Attendess were Evaluated = True</description>
    <inlineHelpText>Indicates the number of Attendess were Evaluated = True</inlineHelpText>
    <label>Number of Attendees Evaluated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>