force-app/main/default/objects/ServiceAppointment/fields/Number_of_OS_Participants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_OS_Participants__c</fullName>
    <formula>Order_Product__r.Number_of_Participants__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of OS Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>