force-app/main/default/objects/ServiceAppointment/fields/Number_of_Toyota_Questionnaires__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Toyota_Questionnaires__c</fullName>
    <label>Number of Toyota Questionnaires</label>
    <summaryFilterItems>
        <field>Course_Questionnaire__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Toyota</value>
    </summaryFilterItems>
    <summaryForeignKey>Course_Questionnaire__c.Service_Appointment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>